argocd/external-services/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-bazarr
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 6767
      targetPort: 6767
      protocol: TCP
      name: bazarr
