argocd/external-services/bazarr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-bazarr
        port: 30046
  tls:
    secretName: ext-cert-bazarr
